--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,21 +56,27 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\ReloadAnimScript.cs" />
-    <Compile Include="Assets\ReticleScript.cs" />
+    <Compile Include="Assets\Scripts\ReloadAnimScript.cs" />
+    <Compile Include="Assets\Scripts\ReticleScript.cs" />
     <Compile Include="Assets\WeaponS\AK47.cs" />
     <Compile Include="Assets\GameManager.cs" />
     <Compile Include="Assets\New Controls.cs" />
-    <Compile Include="Assets\MovementComponent.cs" />
-    <Compile Include="Assets\InputMonobehaviour.cs" />
-    <Compile Include="Assets\WeaponComponent.cs" />
-    <Compile Include="Assets\PlayerEvents.cs" />
-    <Compile Include="Assets\PlayerController.cs" />
-    <Compile Include="Assets\CameraScript.cs" />
+    <Compile Include="Assets\Scripts\MovementComponent.cs" />
+    <Compile Include="Assets\Scripts\InputMonobehaviour.cs" />
+    <Compile Include="Assets\Scripts\WeaponComponent.cs" />
+    <Compile Include="Assets\Scripts\AmmoUI.cs" />
+    <Compile Include="Assets\Scripts\PlayerEvents.cs" />
+    <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\CameraScript.cs" />
     <Compile Include="Assets\MyCons.cs" />
-    <Compile Include="Assets\WeaponSocket.cs" />
+    <Compile Include="Assets\Scripts\WeaponSocket.cs" />
     <Compile Include="Assets\Events\AppEvents.cs" />
-    <Compile Include="Assets\AmmoUI.cs" />
+    <Compile Include="Assets\Scripts\Enemies\ZombieComponent.cs" />
+    <Compile Include="Assets\Scripts\Enemies\StateMachine.cs" />
+    <Compile Include="Assets\Scripts\Enemies\Zombie_Idle_State.cs" />
+    <Compile Include="Assets\Scripts\Enemies\Zombie_Follow_State.cs" />
+    <Compile Include="Assets\Scripts\Enemies\Zombie_Attack_State.cs" />
+    <Compile Include="Assets\Scripts\Enemies\Zombie_Death_State.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
